<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".PackageDetailsActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="8dp">

        <TextView
                android:id="@+id/packageNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/package_name_label"
                android:layout_margin="12dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        <TextView
                android:id="@+id/packageNameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/packageNameLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="com.peter.trustedpetersactivity" android:layout_margin="12dp" android:textAlignment="textEnd"
                android:fontFamily="monospace" android:textStyle="bold"/>

        <TextView
                android:id="@+id/packageSignatureLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/package_signature_label"
                app:layout_constraintTop_toBottomOf="@id/packageNameTextView"
                app:layout_constraintStart_toStartOf="parent" />

        <TextView
                android:id="@+id/packageSignatureTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/packageSignatureLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="B5:7D:59:28:8E:F8:A3:CB:\nCC:B4:DF:F4:C8:91:AF:E0:\nB2:84:EF:FF:F5:C8:A8:87:\nA6:34:38:1F:EF:2C:39:AE "
                android:layout_margin="12dp" android:textAlignment="textEnd" android:fontFamily="monospace" android:textStyle="bold"/>

        <Button android:id="@+id/shareSignatureButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/packageSignatureTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/copySignatureButton"
                android:text="@string/share_signature" android:layout_marginTop="12dp"/>

        <Button android:id="@+id/copySignatureButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/packageSignatureTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/shareSignatureButton"
                android:text="@string/copy_signature" android:layout_marginTop="12dp"/>

        <TextView
                android:id="@+id/assetLinkLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/digital_asset_link_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/copySignatureButton"
        />

        <TextView
                android:id="@+id/assetLinkTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/assetLinkLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="@string/example_asset_link" android:layout_margin="12dp" android:fontFamily="monospace"
                android:background="@color/colorBackground" android:textColor="#000000" android:padding="4dp"/>

        <Button android:id="@+id/shareAssetLinkButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/assetLinkTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/copyAssetLinkButton"
                android:text="@string/share_asset_link" android:layout_marginTop="12dp"/>

        <Button android:id="@+id/copyAssetLinkButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/assetLinkTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/shareAssetLinkButton"
                android:text="@string/copy_asset_link" android:layout_marginTop="12dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>